HttpClientWrapper & HttpConnectionRedirectWrapper, use loader